--- a/Game_Чистякова_ТестСтрупа/css/header.css
+++ b/Game_Чистякова_ТестСтрупа/css/header.css
@@ -27,17 +27,14 @@ body {
 }
 
 .wrapper {
+    margin-left: 160px;
     background: #ebebeb;
     line-height: 1;
     font-size: 24px;
     color: #181818;
     font-family: 'NotoMono-Regular';
     overflow: hidden;
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 1000px;
+    height: 100%;
 }
 
 .wrapper.darkTheme {
@@ -48,13 +45,11 @@ body {
 ._container {
     max-width: 1040px;
     margin: 0px auto;
-    padding: 0px 60px;
     box-sizing: content-box;
 }
 
 .header {
-    position: fixed;
-    width: 100%;
+    margin-left: 100px;
     left: 0;
     top: 0;
     z-index: 50;
@@ -70,12 +65,13 @@ body {
 .header__container {
     display: flex;
     align-items: center;
-    min-height: 130px;
+    max-height: 60px;
+    padding: 20px;
     justify-content: space-around;
 }
 
 .menu__link {
-    font-size: 22px;
+    font-size: 20px;
 }
 
 .menu__list {
@@ -84,7 +80,7 @@ body {
 }
 
 .menu__item {
-    margin: 0px 40px 0px 0px;
+    margin: 0px 25px 0px 0px;
 }
 
 .menu_value {
@@ -100,4 +96,21 @@ body {
 
 li {
     list-style-type: none;
+}
+
+#score_sidebar {
+    position: relative;
+    height: 100%;
+    width: 200px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(177, 177, 177);
+    padding-top: 20px;
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 14px;
+    color: #3a3a3a;
+    display: block;
 }
